--- a/#src/index.html
+++ b/#src/index.html
@@ -22,7 +22,7 @@
 							<option value="Harry">Harry</option>
 						</select>
 					</div>
-						<button type="submit" class="btn btn__new">New Event +</button>
+						 <button  class="btn btn__new">New Event +</button> 
 				</div>
 			</header>
 			<section class="table">
